docs/versioned_docs/version-2.4.0/usage/troubleshooting.mdx
import LanguageContent, { CSharp, Go, Java, Python, TypeScript } from '@site/src/components/LanguageContent';

# Troubleshooting & FAQ

Practical answers to common questions, gotchas, and validation errors.

<LanguageContent>
<Python>

## Why is my message body coming through with literal `*asterisks*` instead of bold?

Slack supports two text types: `mrkdwn` (a Slack-flavoured markdown) and `plain_text`. `slackblocks` uses `mrkdwn` by default for `SectionBlock` text, but **`HeaderBlock`, button labels, modal titles, input labels, and tab/option labels are forced to `plain_text` by Slack** — markdown syntax in those fields is rendered literally.

If you need bold/italic styling in those places, you can't get it. If you need it elsewhere and aren't getting it, double-check you're not accidentally constructing a `Text(type_=TextType.PLAINTEXT, ...)`.

## Why does my message say `text` is required?

Slack will warn (or in some cases reject) messages that have `blocks` but no `text` fallback. The `text` field is used for:

- Desktop and mobile **push notifications**.
- Accessibility readers.
- Clients that don't render Block Kit (rare, but they exist).

Always pass a short `text=` summary alongside `blocks=`:

```python
Message(
    channel="#general",
    text="Build #482 passed",        # fallback
    blocks=[HeaderBlock("Build #482 passed :white_check_mark:"), ...],
)
```

## What is `block_id` for? Should I set it?

`block_id` is a stable identifier for a block. Slack echoes it back to you in interaction payloads (button clicks, modal submits) so you can correlate which block produced the event.

- For **non-interactive** messages, you can leave it unset — `slackblocks` generates a random UUID.
- For **interactive** messages and modals, set explicit `block_id`s so your handlers can look up state reliably:

  ```python
  ActionsBlock(
      block_id="approval:req-123",
      elements=[Button(text="Approve", action_id="approve", value="req-123")],
  )
  ```

The same applies to `action_id` for elements.

## What does `InvalidUsageError: ... exceeds limit of N characters` mean?

Slack imposes hard character limits on most fields. `slackblocks` validates these at construction time so you find out before hitting Slack. Common limits:

| Field                              | Limit (chars) |
|------------------------------------|---------------|
| `SectionBlock.text`                | 3,000         |
| `SectionBlock.fields[i]`           | 2,000         |
| `HeaderBlock.text` (`plain_text`)  | 150           |
| `Button.text`                      | 75            |
| `Button.value`                     | 2,000         |
| `Button.url`                       | 3,000         |
| `Modal.title` / `submit` / `close` | 24            |
| `action_id`                        | 255           |
| `private_metadata`                 | 3,000         |
| `Option.url`                       | 3,000         |

If a field exceeds its limit, truncate or split the content.

## How many blocks can a single message have?

- Channel messages: **50 blocks** (Slack-side limit).
- Modals and home tabs: **100 blocks**.
- `ContextBlock`: max **10 elements**.
- `ActionsBlock`: max **25 elements**.
- `SectionBlock.fields`: max **10 items**.
- `TableBlock`: max **100 rows × 20 columns**.

## My buttons / selects don't do anything when clicked.

`slackblocks` only constructs the *outgoing* payload. Handling button clicks, menu selections, and modal submissions requires:

1. A public HTTPS endpoint registered as your app's **Interactivity & Shortcuts** URL.
2. An interaction handler that parses the payload Slack POSTs to that URL.

The [`slack-bolt`](https://slack.dev/bolt-python/) framework is the easiest way to wire this up.

## Why doesn't markdown work inside a `HeaderBlock`?

By design — Slack only allows `plain_text` in headers. Use a `SectionBlock` (which supports `mrkdwn`) followed by a `DividerBlock` if you want bold or styled text as a heading.

## How do I preview a message without actually sending it?

Use Slack's [Block Kit Builder](https://app.slack.com/block-kit-builder) and paste the JSON output from `message.json()`:

```python
print(message.json())
```

## How do I send a `slackblocks.Message` with `requests`?

`Message` renders to a dict, so:

```python
import os
import requests

from slackblocks import Message, SectionBlock

message = Message(channel="#general", blocks=SectionBlock("Hi!"))

requests.post(
    "https://slack.com/api/chat.postMessage",
    json=message.to_dict(),
    headers={"Authorization": f"Bearer {os.environ['SLACK_API_TOKEN']}"},
).raise_for_status()
```

## Can I use `slackblocks` with async code?

Yes — `slackblocks` itself is synchronous and side-effect-free, so `Message(...)` construction works identically inside `async def` functions. Use the async `WebClient` from `slack_sdk.web.async_client` to actually send:

```python
from slack_sdk.web.async_client import AsyncWebClient
from slackblocks import Message, SectionBlock

async def notify():
    client = AsyncWebClient(token=...)
    message = Message(channel="#general", blocks=SectionBlock("Hi!"))
    await client.chat_postMessage(**message)
```

## How does `slackblocks` compare to the block classes in `slack-sdk`?

`slack-sdk` ships its own `Block` / `SectionBlock` / etc. classes. `slackblocks` predates them and offers:

- A more concise API (e.g. `SectionBlock("Hi!")` vs `SectionBlock(text=MarkdownTextObject(text="Hi!"))`).
- Stricter up-front validation with informative `InvalidUsageError` messages.
- Independent release cadence — usable with the legacy `slackclient` or no SDK at all.

Use whichever you find more ergonomic; they produce equivalent JSON.

## I'm getting a `pytest` `error` from a Python `DeprecationWarning`.

`slackblocks`' own test suite turns warnings into errors via `pyproject.toml`. That setting only affects this project's CI — it doesn't propagate to your application. If you're seeing it, it's because you're running the `slackblocks` test suite as part of contributing.

## Where do I report bugs / request features?

Use [GitHub Issues](https://github.com/nicklambourne/slackblocks/issues).

</Python>
<TypeScript>

## Why is my message showing literal `*asterisks*` instead of bold text?

Slack supports `mrkdwn` and `plain_text`. `SectionBlock().text()` turns a string into `mrkdwn` by default, but Slack requires headers, button labels, modal titles, input labels, and option labels to use `plain_text`. Markdown syntax in those fields is displayed literally.

If styling is missing from a field that supports it, check that you have not wrapped the value with `PlainText()`. Use `Markdown()` when you need to choose the text type explicitly.

## Why does Slack say `text` is required?

Messages containing blocks should also provide a short plain-text fallback. Slack uses it for push notifications, assistive technology, and clients that cannot render Block Kit.

```ts
import { HeaderBlock, Message } from "@nicklambourne/slackblocks";

const payload = Message()
  .channel("C0123456")
  .text("Build #482 passed")
  .blocks(HeaderBlock().text("Build #482 passed :white_check_mark:"))
  .build();
```

## What is `blockId` for? Should I set it?

`blockId` becomes `block_id` in the Slack payload. Slack returns it in interaction payloads, which lets your app identify the block that produced a button click or modal submission.

You can omit it for non-interactive content. For interactive messages and views, use a stable value that your handlers understand:

```ts
import { ActionsBlock, Button } from "@nicklambourne/slackblocks";

ActionsBlock()
  .blockId("approval:req-123")
  .elements(Button().text("Approve").actionId("approve").value("req-123"))
  .build();
```

The same principle applies to `actionId`, which becomes `action_id` on the wire.

## What do `LengthError` and the other validation errors mean?

`slackblocks` validates the complete object when `.build()` is called. An error such as `LengthError`, `OutOfRangeError`, or `MissingRequiredError` means the input would violate a known Block Kit rule. The error includes a path so you can find the invalid field before sending anything to Slack.

Common limits include:

| Builder field                       | Limit |
|-------------------------------------|-------|
| `SectionBlock().text()`             | 3,000 characters |
| `SectionBlock().fields()` items     | 2,000 characters |
| `HeaderBlock().text()`              | 150 characters |
| `Button().text()`                   | 75 characters |
| `Button().value()`                  | 2,000 characters |
| `Button().url()`                    | 3,000 characters |
| `Modal().title()` / `submit()` / `close()` | 24 characters |
| `actionId`                          | 255 characters |
| `privateMetadata`                   | 3,000 characters |
| `Option().url()`                    | 3,000 characters |

If Slack adds a field or raises a limit before the package catches up, pass `{ validate: false }` to `.build()` for that construction only.

## How many blocks can a payload contain?

- Channel messages: **50 blocks**.
- Modals and home tabs: **100 blocks**.
- `ContextBlock()`: up to **10 elements**.
- `ActionsBlock()`: up to **25 elements**.
- `SectionBlock().fields()`: up to **10 items**.
- `TableBlock()`: up to **100 rows × 20 columns**.

## Why don't my buttons or selects do anything when clicked?

`slackblocks` only constructs outgoing payloads. Handling interactions requires a public HTTPS endpoint configured as your Slack app's **Interactivity & Shortcuts** request URL, plus code that handles the payload Slack sends there.

[`@slack/bolt`](https://slack.dev/bolt-js/) is the usual starting point for a TypeScript or JavaScript app.

## Why doesn't markdown work inside `HeaderBlock()`?

Slack only accepts `plain_text` in header blocks. Use `SectionBlock()` followed by `DividerBlock()` when you need styled heading text.

## How can I preview a message without sending it?

Generate a Block Kit Builder URL and open it in your browser:

```ts
import { blockKitBuilderUrl, Message, SectionBlock } from "@nicklambourne/slackblocks";

const payload = Message()
  .channel("C0123456")
  .text("Preview message")
  .blocks(SectionBlock().text("Hello!"))
  .build();

console.log(blockKitBuilderUrl(payload));
```

You can also paste `JSON.stringify(payload, null, 2)` into Slack's [Block Kit Builder](https://app.slack.com/block-kit-builder).

## How do I send a payload with `fetch()`?

`.build()` returns a plain object, so no conversion step is required:

```ts
import { Message, SectionBlock } from "@nicklambourne/slackblocks";

const payload = Message()
  .channel("C0123456")
  .text("Hello!")
  .blocks(SectionBlock().text("Hello!"))
  .build();

const response = await fetch("https://slack.com/api/chat.postMessage", {
  method: "POST",
  headers: {
    authorization: `Bearer ${process.env.SLACK_API_TOKEN}`,
    "content-type": "application/json",
  },
  body: JSON.stringify(payload),
});

if (!response.ok) throw new Error(`Slack returned ${response.status}`);
```

## Can I use `slackblocks` in async code?

Yes. The builders are synchronous and side-effect-free. Construct and build the payload wherever it is convenient, then `await` your Slack SDK or HTTP client when you send it.

## How does this differ from `@slack/types`?

`@slack/types` supplies TypeScript definitions for Slack payloads. `slackblocks` adds fluent construction, camelCase setters, snake_case wire output, and build-time validation with path-aware errors. The resulting objects remain compatible with Slack's official types and clients.

## Where do I report bugs or request features?

Use [GitHub Issues](https://github.com/nicklambourne/slackblocks/issues).

</TypeScript>
<Go>

## Why is Slack showing literal `*asterisks*`?

`NewSectionBlock().Text(...)` promotes a string to `mrkdwn`, but Slack requires headers, button labels, modal titles, input labels, and option labels to be `plain_text`. Markdown syntax in those fields is intentionally literal.

## Why should a message set fallback text?

Slack uses the top-level `Text(...)` value for notifications, accessibility, and clients that cannot render Block Kit:

```go
payload, err := slackblocks.NewMessage().
    Channel("C0123456").
    Text("Build #482 passed").
    Blocks(slackblocks.NewHeaderBlock().Text("Build #482 passed :white_check_mark:")).
    Build()
```

## What is `BlockID` for? Should I set it?

`block_id` is a stable identifier for a block. Slack echoes it back in interaction payloads (button clicks, modal submissions) so a handler can tell which block produced the event. Go omits the field unless you set it, unlike Python, which generates a UUID.

- For **non-interactive** messages, leave it unset.
- For **interactive** messages and modals, set an explicit `BlockID(...)` so handlers can look up state reliably:

  ```go
  slackblocks.NewActionsBlock().
      BlockID("approval:req-123").
      Elements(slackblocks.NewButton().Text("Approve").ActionID("approve").Value("req-123"))
  ```

## Why doesn't markdown work inside `NewHeaderBlock()`?

By design: Slack only allows `plain_text` in headers, so `NewHeaderBlock().Text(...)` always produces a plain-text object. Use `NewSectionBlock()` (which supports `mrkdwn`) followed by `NewDividerBlock()` if you want bold or styled text as a heading.

## What does a validation failure contain?

`Build()` returns a `*slackblocks.ValidationError`. Use `errors.As` to inspect its stable `Category`, `Path`, and `Detail` fields:

```go
var validation *slackblocks.ValidationError
if errors.As(err, &validation) {
    log.Printf("%s at %s: %s", validation.Category, validation.Path, validation.Detail)
}
```

Categories are identical across Python, TypeScript, Go, Java, and C#: `length-exceeded`, `out-of-range`, `mutually-exclusive`, `type-mismatch`, `missing-required`, and `invalid-usage`.

## How many blocks can a payload contain?

- Channel messages: **50 blocks**.
- Modals and App Home tabs: **100 blocks**.
- Context blocks: **10 elements**.
- Actions blocks: **25 elements**.
- Table blocks: **100 rows × 20 columns**.

## Why do buttons and select menus not respond by themselves?

slackblocks only constructs outgoing JSON. Your app still needs a public HTTPS interactivity endpoint and a handler for Slack's request payload. The builders are synchronous and side-effect-free, so they work normally inside concurrent handlers.

## How do I preview a payload?

Marshal the completed `Object` with `encoding/json`, then paste it into Slack's [Block Kit Builder](https://app.slack.com/block-kit-builder).

## How does slackblocks compare to the block types in `slack-go/slack`?

`slack-go/slack` ships its own `slack.SectionBlock` and related structs. slackblocks builders implement `slack.Block`, so both work with `slack.MsgOptionBlocks`, and slackblocks adds:

- A fluent API that coerces strings to the right text object and exposes only the fields each block supports.
- Validation before the request is sent, with a stable `ErrorCategory` and field path in every `ValidationError`.
- The newer Block Kit shapes (tables, cards, carousels, charts, plans) and the same JSON as the Python, TypeScript, Java, and C# packages.

Use whichever you find more ergonomic; they produce equivalent JSON.

## Where do I report bugs or request features?

Use [GitHub Issues](https://github.com/nicklambourne/slackblocks/issues).

</Go>
<Java>

## Why is Slack showing literal `*asterisks*`?

`SectionBlock.builder().markdownText(...)` creates `mrkdwn`, but Slack requires headers, button labels, modal titles, input labels, and option labels to use `plain_text`. Markdown syntax in those fields is intentionally literal.

## Why should a message set fallback text?

Slack uses the top-level request text for notifications, accessibility, and clients that cannot render Block Kit. Keep that value on the official SDK request:

```java
client.chatPostMessage(ChatPostMessageRequest.builder()
    .channel("C0123456")
    .text("Build #482 passed")
    .blocks(List.of(HeaderBlock.builder()
        .text("Build #482 passed :white_check_mark:")
        .build()))
    .build());
```

## What does a validation failure contain?

`build()` throws [`ValidationException`](../reference/java/errors#validationexception) before any HTTP request. Its stable category and path identify both the kind and location of the invalid value:

```java
try {
  ButtonElement.builder().text("x".repeat(100)).actionId("approve").build();
} catch (ValidationException error) {
  logger.warn("{} at {}: {}", error.getCategory(), error.getPath(), error.getMessage());
}
```

Categories are identical across every implementation: `length-exceeded`, `out-of-range`, `mutually-exclusive`, `type-mismatch`, `missing-required`, and `invalid-usage`.

## How many blocks can a payload contain?

- Channel messages: **50 blocks**.
- Modals and App Home tabs: **100 blocks**.
- Context blocks: **10 elements**.
- Actions blocks: **25 elements**.
- Table blocks: **100 rows × 20 columns**.

## Why do buttons and select menus not respond by themselves?

slackblocks constructs outgoing Block Kit values. Your application still needs an interactivity endpoint and event handlers. [Bolt for Java](https://slack.dev/java-slack-sdk/guides/bolt-basics) is the usual starting point; the builders are immutable and safe to construct inside concurrent handlers.

## Why does the compiler say a block class reference is ambiguous?

slackblocks and the Slack SDK both define classes such as `SectionBlock` and `ButtonElement`. Replace wildcard imports with single-type imports of the slackblocks classes you use. If one file genuinely needs both versions, refer to the SDK class by its fully qualified name.

## How do I pass a `Paginator` or `Accordion` result to the SDK?

Components return `List<Block>`, and the SDK request builder expects `List<LayoutBlock>`. `List.copyOf(blocks)` widens the list without a cast: `.blocks(List.copyOf(blocks))`.

## How do I preview a payload?

Print `SlackblocksJson.write(value)` and paste it into Slack's [Block Kit Builder](https://app.slack.com/block-kit-builder).

## Can I use slackblocks with asynchronous code?

Yes. Builders are synchronous, side-effect-free value construction. Use them before submitting a request through your asynchronous HTTP or application framework, or with the Slack SDK's async client facilities.

## How does this differ from the Slack Java SDK's block builders?

The official SDK supplies model classes and delivery clients. slackblocks adds one consistent concrete fluent API, shared cross-language validation, path-aware errors, and newer Block Kit shapes while implementing `LayoutBlock` for direct SDK interoperability.

## Where do I report bugs or request features?

Use [GitHub Issues](https://github.com/nicklambourne/slackblocks/issues).

</Java>
<CSharp>

## Why is Slack showing literal `*asterisks*`?

Strings passed to a section's text become `mrkdwn`, but Slack requires headers, button labels, modal titles, input labels, and option labels to use `plain_text`. slackblocks sends those fields as `plain_text`, so Markdown syntax in them is intentionally literal.

## Why should a message set fallback text?

Slack uses the top-level `text` for notifications, accessibility, and clients that cannot render Block Kit. Set it on the payload:

```csharp
using Slackblocks.Blocks;
using Slackblocks.Payloads;

var message = new MessagePayload(
    "C0123456",
    text: "Build #482 passed",
    blocks: [new HeaderBlock("Build #482 passed :white_check_mark:")]);
```

## What does a validation failure contain?

Constructors throw [`ValidationException`](../reference/csharp/errors#validationexception) before any HTTP request. Its stable category and path identify both the kind and location of the invalid value:

```csharp
using Slackblocks;
using Slackblocks.Elements;

try
{
    _ = new ButtonElement(new string('x', 100), "approve");
}
catch (ValidationException error)
{
    Console.Error.WriteLine($"{error.Category} at {error.Path}: {error.Message}");
}
```

`ValidationException` derives from `ArgumentException`. `error.Category.ToWireValue()` returns the shared name, and the categories are identical across every implementation: `length-exceeded`, `out-of-range`, `mutually-exclusive`, `type-mismatch`, `missing-required`, and `invalid-usage`.

## How many blocks can a payload contain?

- Channel messages: **50 blocks**.
- Modals and App Home tabs: **100 blocks**.
- Context blocks: **10 elements**.
- Actions blocks: **25 elements**.
- Table blocks: **100 rows × 20 columns**.

## Why do buttons and select menus not respond by themselves?

slackblocks constructs outgoing Block Kit values. Your application still needs an interactivity endpoint that verifies Slack's request signature and handles the actions. Values are immutable, so they are safe to share and construct inside concurrent handlers.

## Why does the compiler say a type reference is ambiguous?

slackblocks and .NET Slack client libraries such as SlackNet both define types such as `SectionBlock` and `ButtonElement`. Import only the namespaces a file needs, or alias one, for example `using Blocks = Slackblocks.Blocks;`.

## Why does `TaskCardStatus` not match the Slack name?

Slack calls it the task status, but `TaskStatus` would collide with `System.Threading.Tasks.TaskStatus`, which most .NET projects import implicitly. The enum is named `TaskCardStatus` and sends Slack's usual values.

## How do I pass a `Paginator` or `Accordion` result to a payload?

Components return `IReadOnlyList<IBlock>`. Spread the result into a collection expression, such as `blocks: [header, .. pages]`, or pass it directly when it is the only content.

## How do I send a Slack field slackblocks does not support yet?

Every constructor accepts `additionalFields`. Its values are validated with the rest of the object, and a field cannot be set both there and through its named parameter.

## How do I preview a payload?

Print `value.ToJson()` and paste it into Slack's [Block Kit Builder](https://app.slack.com/block-kit-builder).

## Can I use slackblocks with asynchronous code?

Yes. Construction is synchronous and free of side effects. Build values before an `await`ed request, or inside any asynchronous handler.

## How does this differ from the block types in a client library such as SlackNet?

A client library's block classes describe the JSON shape for that client. slackblocks adds validation before the request is sent, with a stable `ErrorCategory` and field path in every `ValidationException`, the newer Block Kit shapes (tables, cards, carousels, charts, plans), and the same JSON as the Python, TypeScript, Go, and Java packages, with no dependencies beyond .NET. Use slackblocks to build the payload, and `HttpClient` or your client library to send it.

## Where do I report bugs or request features?

Use [GitHub Issues](https://github.com/nicklambourne/slackblocks/issues).

</CSharp>
</LanguageContent>
